Separated composeApp and desktopApp nucleus configuration - Native Library Resolution: Relocated the `setupNativePathForMingw` helper from `composeApp` to `desktopApp`. - **Module Cleanup**: Removed the `nucleus.application` configuration and redundant Windows path logic from `composeApp`, as now composeApp is fully a shared module - ProGuard Configuration: Added a simple (copied fully) `proguard-rules.pro` to the desktop module.